# SmartSwitcher

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  config.toml  run.bat  run.ps1
app/: Cargo.toml
app/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
doc/: 00🔵-СТАРТ ЗДЕСЬ универсальная система документации.md  01🔵-README.md  03🔵-ROADMAP.md  03🔵-ПЛАН РАЗРАБОТКИ smart-switcher mvp.md
doc/01-ОБЩАЯ ИНФОРМАЦИЯ проект/: 01-ВИДЕНИЕ И ГРАНИЦЫ MVP.md  02-ТРЕБОВАНИЯ НФ требования.md
doc/02-СТРУКТУРА ПРОЕКТА workspace crates/: 01-АРХИТЕКТУРА workspace crates.md  02-СОБЫТИЯ И ТИПЫ shared_types.md
doc/03-РАЗРАБОТКА Rust сборка тесты/: 01-ЛОКАЛЬНЫЙ ЗАПУСК И СБОРКА.md  02-ЛОГИРОВАНИЕ tracing.md
doc/04-ПЛАТФОРМЫ Windows macOS Linux/: 01-WINDOWS.md  02-macOS.md  03-Linux-X11.md  04-Wayland.md
doc/05-ИНТЕГРАЦИИ API зависимости/: 01-SPELLCHECK API LanguageTool.md
doc/06-БЕЗОПАСНОСТЬ приватность/: 01-ПРИВАТНОСТЬ И УГРОЗЫ.md  02-FAIL-CLOSED ПОЛИТИКА.md
doc/07-ФУНКЦИОНАЛ модули/: 01-MODULE layout_switcher.md  02-MODULE spell_checker.md  03-CAPABILITIES.md
doc/08-РАЗВЕРТЫВАНИЕ релизы/: 01-РЕЛИЗЫ И ВЕРСИОНИРОВАНИЕ.md
doc/09-РУКОВОДСТВА how-to/: 01-HOWTO добавить модуль.md  02-HOWTO добавить платформенный бэкенд.md
doc/10-АРХИВ/: README.md
modules/layout_switcher/: Cargo.toml
modules/layout_switcher/src/: lib.rs
modules/spell_checker/: Cargo.toml
modules/spell_checker/src/: lib.rs
platform/: Cargo.toml
platform/src/: lib.rs  linux_x11.rs  windows.rs
shared_types/: Cargo.toml
shared_types/src/: config.rs  events.rs  lib.rs
