[package]
name = "smart_switcher_platform"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
smart_switcher_shared_types = { path = "../shared_types" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
	"Win32_Foundation",
	"Win32_System_LibraryLoader",
	"Win32_System_Threading",
	"Win32_UI_WindowsAndMessaging",
] }
