[package]
name = "spell_checker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
smart_switcher_core = { path = "../../core" }
smart_switcher_shared_types = { path = "../../shared_types" }
tokio = { version = "1", features = ["rt", "sync"] }
tracing = "0.1"
